--- a/styles/styles.css
+++ b/styles/styles.css
@@ -62,6 +62,11 @@ p {
     font-family: "Roboto Slab", serif;
 }
 
+a {
+    text-decoration: none;
+    color: var(--creme-color);
+}
+
 #global-header {
     font-family: "Playfair Display SC", serif;
     width: 100%;
@@ -423,4 +428,79 @@ textarea:hover {
 .project-link:hover {
     background-image: linear-gradient (to right,
             #00f2fe 0%, #4facfe 100%);
+}
+
+
+.footer {
+    display: flex;
+    align-items: flex-start;
+    gap: 40px;
+    margin: 0 auto;
+    color: var(--background-color);
+    background-color: var(--dark-color);
+    padding: 20px 20px;
+    justify-content: space-between;
+}
+
+#footer-links {
+    display: flex;
+    gap: 18px;
+}
+
+#footer-links>div {
+    display: grid;
+    gap: 10px;
+    margin-bottom: 30px;
+}
+
+.footer h2 {
+    margin: 0;
+    font-size: 16px;
+    font-weight: 400;
+    color: var(--creme-color);
+}
+
+#copyright {
+    font-size: 12px;
+}
+
+#copyright > a {
+    margin: 0 4px;    
+}
+
+#copyright>span {
+    margin-right: 10px;
+}
+
+@media (width >=620px) {
+    .footer {
+        margin: 0 auto;
+        max-width: 100%;
+        padding: 20px 20px;
+    }
+}
+
+@media (width < 620px) {
+    .footer {
+        flex-direction: column-reverse;
+        gap: 16px;
+    }
+
+    #footer-links {
+        font-size: 24px;
+    }
+}
+
+@media (width < 420px) {
+    .footer {
+        text-align: center;
+        align-items: center;
+    }
+
+    #copyright>span {
+        display: block;
+        margin-right: 0;
+        margin-bottom: 2px;
+    }
+
 }
