--- a/styles/styles.css
+++ b/styles/styles.css
@@ -39,8 +39,9 @@
 
 * {
     -border: 1px double black;
-    margin: 0;
     padding: 0;
+    margin: 0;
+
 }
 
 body {
@@ -70,12 +71,10 @@ a {
 #global-header {
     font-family: "Playfair Display SC", serif;
     width: 100%;
-    display: inline-flex;
+    display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: var(--dark-color);
-    padding-left: 20px;
-    padding-right: 20px;
 }
 
 #global-header h1 {
@@ -83,12 +82,12 @@ a {
     float: left;
     color: var(--creme-color);
     font: italic;
+    padding-left: 1.5rem;
 }
 
 #global-header nav {
-    float: right;
     display: flex;
-    padding-right: 40px;
+    padding-right: 1.5rem;
 }
 
 #global-header ul {
@@ -122,7 +121,7 @@ a {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    gap: 20px;
+    gap: 10px;
     padding-bottom: 5vh;
 }
 
@@ -134,7 +133,7 @@ a {
 .home img {
     max-height: 80vh;
     max-width: 45vw;
-    border-radius: 20%;
+    border-radius: 50%;
     border: 0.5vw solid var(--dark-black);
     margin: 1.0vh 1.0vw 1.0vh 1.0vw;
     object-fit: contain;
@@ -143,10 +142,15 @@ a {
 #landingPage-content h2 {
     padding: 30px 0;
     text-align: left;
+    font-size: 50px;
+    font-weight: 600;
+
 }
 
 #landingPage-content p {
     padding: 10px 0;
+    font-family: "Roboto Slab", serif;
+    font-size: 16px;
 }
 
 #landingPage-content button {
@@ -197,17 +201,17 @@ a {
 }
 
 #about {
-    height: 100vh;
+    /* padding-inline: 1.5rem; */
+    margin-inline: auto;
     width: 100%;
     align-items: center;
-    padding: 0 2% 0 2%;
 
 }
 
 #skills-section {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 15px;
+    gap: 40px;
     margin-bottom: 200px;
 }
 
@@ -249,28 +253,59 @@ a {
 
   } */
 
-table {
+.projects {
+    max-width: 120rem;
+    padding-inline: 1.5rem;
+    margin-inline: auto;
+}
+
+.project-container {
+    display: flex;
+    background-color: var(--dark-color);
+    box-shadow: 0.5rem 0.5rem 1rem rgba(0, 0, 0, 0.5);
+    transition: background-color 0.25s;
+}
+
+.project-img {
+    flex: 1;
+}
+
+.project-img img {
     width: 100%;
-    border-collapse: collapse;
-    text-align: left;
-    margin: auto;
+    height: 100%;
+    object-fit: cover;
+    mix-blend-mode: var(--grey-color);
 }
 
-caption {
-    text-align: center;
-    font-size: 2em;
-    margin: 20px 0;
-    font-weight: bold;
+.project-info {
+    flex: 1;
+    padding: 5rem;
+    color: var(--creme-color);
 }
 
-th,
-td {
-    padding: 20px;
-    vertical-align: top;
+.project-title {
+    color: var(--creme-color);
+    font-size: clamp(3rem, 5vw, 5rem);
 }
 
-colgroup col {
-    width: 33.33%;
+.project-subtitle {
+    font-size: 1.4rem;
+    font-weight: normal;
+    text-transform: uppercase;
+    margin-bottom: 2.5rem;
+}
+
+.project-info p:not(:last-child) {
+    margin-bottom: 1.5rem;
+}
+
+.project-link {
+    display: inline-block;
+    color: var(--creme-color);
+    padding: 1rem 2.5rem;
+    margin-top: 2.5rem;
+    border: 2px solid var(--creme-color);
+    border-radius: 12px;
 }
 
 form {
@@ -352,85 +387,6 @@ textarea:hover {
     color: #e2dedb;
 }
 
-#projects {
-    height: 100vh;
-    width: 100%;
-    padding: 50px;
-}
-
-.projects {
-    display: flex;
-    align-items: center;
-    max-width: 90rem;
-    margin: auto;
-    background-color: #fff;
-    padding: 2.5rem;
-    box-shadow: 0 1.4rem 8rem rgba(0, 0, 0, 0.2);
-    border-radius: 0.8rem;
-}
-
-.project-pic {
-    position: relative;
-    min-width: 35rem;
-    max-width: 35em;
-    height: 30rem;
-    transform: translate(-8rem);
-}
-
-.project-pic img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 0.8rem;
-}
-
-.project-pic::before {
-    content: "";
-    position: absolute;
-    inset: 0;
-    background: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
-    box-shadow: 0.5rem 0.5rem 3rem 1px rgba(0, 0, 0, 0.05);
-    border-radius: 0.8rem;
-    opacity: 0.5;
-}
-
-.project-date span {
-    display: block;
-    color: #8e8C8C;
-    font-weight: 600;
-    margin: 0.5rem 0;
-}
-
-.project-title {
-    font-size: 2.5rem;
-    margin: 1.5rem 0 2rem;
-    text-transform: uppercase;
-    color: #4facfe;
-    text-align: left;
-}
-
-.project-info p {
-    margin-bottom: 3rem;
-    color: rgba(0, 0, 0, 0.7);
-}
-
-.project-link {
-    display: inline-block;
-    background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
-    padding: 1rem 1.5rem;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    color: #fff;
-    border-radius: 0.8rem;
-}
-
-.project-link:hover {
-    background-image: linear-gradient (to right,
-            #00f2fe 0%, #4facfe 100%);
-}
-
-
 .footer {
     display: flex;
     align-items: flex-start;
@@ -464,8 +420,8 @@ textarea:hover {
     font-size: 12px;
 }
 
-#copyright > a {
-    margin: 0 4px;    
+#copyright>a {
+    margin: 0 4px;
 }
 
 #copyright>span {
@@ -481,6 +437,18 @@ textarea:hover {
 }
 
 @media (width < 620px) {
+    .project-container {
+        flex-direction: column;
+    }
+
+    .project-info {
+        padding: 2.5rem;
+    }
+
+    .project-link {
+        margin-top: 1.5rem;
+    }
+
     .footer {
         flex-direction: column-reverse;
         gap: 16px;
@@ -492,6 +460,18 @@ textarea:hover {
 }
 
 @media (width < 420px) {
+    .project-container {
+        flex-direction: column;
+    }
+
+    .project-info {
+        padding: 2.5rem;
+    }
+
+    .project-link {
+        margin-top: 1.5rem;
+    }
+
     .footer {
         text-align: center;
         align-items: center;
