--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,249 +1,255 @@
 @font-face {
-    font-family: 'Playfair Display SC';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: url(https://fonts.gstatic.com/s/playfairdisplaysc/v15/ke85OhoaMkR6-hSn7kbHVoFf7ZfgMPr_pb4.ttf) format('truetype');
+  font-family: "Playfair Display SC";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/playfairdisplaysc/v15/ke85OhoaMkR6-hSn7kbHVoFf7ZfgMPr_pb4.ttf)
+    format("truetype");
 }
 
 @font-face {
-    font-family: 'Roboto Slab';
-    font-style: normal;
-    font-weight: 300;
-    font-display: swap;
-    src: url(https://fonts.gstatic.com/s/robotoslab/v25/BngbUXZYTXPIvIBgJJSb6s3BzlRRfKOFbvjo0oSWaA.ttf) format('truetype');
+  font-family: "Roboto Slab";
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/robotoslab/v25/BngbUXZYTXPIvIBgJJSb6s3BzlRRfKOFbvjo0oSWaA.ttf)
+    format("truetype");
 }
 
 @font-face {
-    font-family: 'Cormorant Unicase';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: url(https://fonts.gstatic.com/s/cormorantunicase/v24/HI_QiZUaILtOqhqgDeXoF_n1_fTGX-vT.ttf) format('truetype');
+  font-family: "Cormorant Unicase";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/cormorantunicase/v24/HI_QiZUaILtOqhqgDeXoF_n1_fTGX-vT.ttf)
+    format("truetype");
 }
 
 @font-face {
-    font-family: 'Molengo';
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: url(https://fonts.gstatic.com/s/molengo/v16/I_uuMpWeuBzZNBtQbbQ.ttf) format('truetype');
+  font-family: "Molengo";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/molengo/v16/I_uuMpWeuBzZNBtQbbQ.ttf)
+    format("truetype");
 }
 
 :root {
-    --dark-color: #555A54;
-    --background-color: #BFBBAF;
-    --creme-color: #F7F2EF;
-    --grey-color: #E1DDD2;
+  --dark-color: #555a54;
+  --background-color: #bfbbaf;
+  --creme-color: #f7f2ef;
+  --grey-color: #e1ddd2;
 }
 
 * {
-    -border: 1px double black;
-    padding: 0;
-    margin: 0;
-
+  -border: 1px double black;
+  padding: 0;
+  margin: 0;
 }
 
 body {
-    background-color: var(--creme-color);
-
+  background-color: var(--creme-color);
 }
 
 h1 {
-    font-family: "Cormorant Unicase", serif;
+  font-family: "Cormorant Unicase", serif;
 }
 
 h2,
 h3 {
-    font-family: "Playfair Display SC", serif;
-    text-align: center;
+  font-family: "Playfair Display SC", serif;
+  text-align: center;
 }
 
 p {
-    font-family: "Roboto Slab", serif;
+  font-family: "Roboto Slab", serif;
 }
 
 a {
-    text-decoration: none;
-    color: var(--creme-color);
+  text-decoration: none;
+  color: var(--creme-color);
 }
 
 #global-header {
-    font-family: "Playfair Display SC", serif;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: var(--dark-color);
+  font-family: "Playfair Display SC", serif;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--dark-color);
 }
 
 #global-header h1 {
-    font-family: "Playfair Display SC", serif;
-    float: left;
-    color: var(--creme-color);
-    font: italic;
-    padding-left: 1.5rem;
+  font-family: "Playfair Display SC", serif;
+  float: left;
+  color: var(--creme-color);
+  font: italic;
+  padding-left: 1.5rem;
 }
 
 #global-header nav {
-    display: flex;
-    padding-right: 1.5rem;
+  display: flex;
+  padding-right: 1.5rem;
 }
 
 #global-header ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    float: right;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  float: right;
 }
 
 #global-header li {
-    vertical-align: middle;
-    float: left;
+  vertical-align: middle;
+  float: left;
 }
 
 #global-header li a {
-    display: block;
-    color: black;
-    text-align: center;
-    padding: 12px 12px;
-    text-decoration: none;
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 12px 12px;
+  text-decoration: none;
 }
 
 #global-header li a:hover {
-    background-color: grey;
+  background-color: grey;
 }
 
 .home {
-    height: 90vh;
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    gap: 10px;
-    padding-bottom: 5vh;
+  height: 90vh;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 10px;
+  padding-bottom: 5vh;
 }
 
 #landingPage-content {
-    max-width: 45%;
-    text-align: left;
+  max-width: 45%;
+  text-align: left;
 }
 
 .home img {
-    max-height: 80vh;
-    max-width: 45vw;
-    border-radius: 50%;
-    border: 0.5vw solid var(--dark-black);
-    margin: 1.0vh 1.0vw 1.0vh 1.0vw;
-    object-fit: contain;
+  max-height: 80vh;
+  max-width: 45vw;
+  border-radius: 50%;
+  border: 0.5vw solid var(--dark-black);
+  margin: 1vh 1vw 1vh 1vw;
+  object-fit: contain;
 }
 
 #landingPage-content h2 {
-    padding: 30px 0;
-    text-align: left;
-    font-size: 50px;
-    font-weight: 600;
-
+  padding: 30px 0;
+  text-align: left;
+  font-size: 50px;
+  font-weight: 600;
 }
 
 #landingPage-content p {
-    padding: 10px 0;
-    font-family: "Roboto Slab", serif;
-    font-size: 16px;
+  padding: 10px 0;
+  font-family: "Roboto Slab", serif;
+  font-size: 16px;
 }
 
 #landingPage-content button {
-    position: relative;
-    width: 130px;
-    height: 40px;
-    line-height: 42px;
-    padding: 0;
-    border: none;
-    background: rgb(255, 27, 0);
-    background: linear-gradient(0deg, rgba(255, 27, 0, 1) 0%, rgba(251, 75, 2, 1) 100%);
-
+  position: relative;
+  width: 130px;
+  height: 40px;
+  line-height: 42px;
+  padding: 0;
+  border: none;
+  background: rgb(255, 27, 0);
+  background: linear-gradient(
+    0deg,
+    rgba(255, 27, 0, 1) 0%,
+    rgba(251, 75, 2, 1) 100%
+  );
 }
 
 #landingPage-content button:hover {
-    color: #f0094a;
-    background: transparent;
-    box-shadow: none;
+  color: #f0094a;
+  background: transparent;
+  box-shadow: none;
 }
 
 #landingPage-content button:before,
 #landingPage-content button:after {
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    height: 2px;
-    width: 0;
-    background: #f0094a;
-    box-shadow:
-        -1px -1px 5px 0px #fff,
-        7px 7px 20px 0px #0003,
-        4px 4px 5px 0px #0002;
-    transition: 400ms ease all;
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 2px;
+  width: 0;
+  background: #f0094a;
+  box-shadow: -1px -1px 5px 0px #fff, 7px 7px 20px 0px #0003,
+    4px 4px 5px 0px #0002;
+  transition: 400ms ease all;
 }
 
 #landingPage-content button:after {
-    right: inherit;
-    top: inherit;
-    left: 0;
-    bottom: 0;
+  right: inherit;
+  top: inherit;
+  left: 0;
+  bottom: 0;
 }
 
 #landingPage-content button:hover:before,
 #landingPage-content button:hover:after {
-    width: 100%;
-    transition: 800ms ease all;
+  width: 100%;
+  transition: 800ms ease all;
 }
 
 #about {
-    /* padding-inline: 1.5rem; */
-    margin-inline: auto;
-    width: 100%;
-    align-items: center;
+  margin-inline: auto;
+  width: 100%;
+  align-items: center;
+}
 
+#about h2 {
+  padding: 3rem;
+  font-size: 50px;
+  font-weight: 600;
 }
 
 #skills-section {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 40px;
-    margin-bottom: 200px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 40px;
+  margin-bottom: 200px;
 }
 
 .skill-category {
-    background: #fff;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border-radius: 4px;
-    padding: 20px;
-    transition: all .3s ease-in;
+  background: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  padding: 20px;
+  transition: all 0.3s ease-in;
 }
 
-.skill-category>* {
-    padding: 10px;
+.skill-category > * {
+  padding: 10px;
 }
 
 .skill-category img {
-    width: 100%;
-    height: 80%;
-    object-fit: cover;
+  width: 100%;
+  height: 80%;
+  object-fit: cover;
 }
 
 .skill-category h3 {
-    padding: 20px 10px;
-    font-size: 1.5rem;
+  padding: 20px 10px;
+  font-size: 1.5rem;
 }
 
 .skill-category p {
-    line-height: 20px;
-    font-size: 400;
+  line-height: 20px;
+  font-size: 400;
 }
 
 /* .skill-category:hover {
@@ -254,233 +260,245 @@ a {
   } */
 
 .projects {
-    max-width: 120rem;
-    padding-inline: 1.5rem;
-    margin-inline: auto;
+  max-width: 120rem;
+  padding-inline: 1.5rem;
+  margin-inline: auto;
+}
+
+.projects h2 {
+  padding: 3rem;
+  font-size: 50px;
+  font-weight: 600;
 }
 
 .project-container {
-    display: flex;
-    background-color: var(--dark-color);
-    box-shadow: 0.5rem 0.5rem 1rem rgba(0, 0, 0, 0.5);
-    transition: background-color 0.25s;
+  display: flex;
+  background-color: var(--dark-color);
+  box-shadow: 0.5rem 0.5rem 1rem rgba(0, 0, 0, 0.5);
+  transition: background-color 0.25s;
 }
 
 .project-img {
-    flex: 1;
+  flex: 1;
 }
 
 .project-img img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    mix-blend-mode: var(--grey-color);
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  mix-blend-mode: var(--grey-color);
 }
 
 .project-info {
-    flex: 1;
-    padding: 5rem;
-    color: var(--creme-color);
+  flex: 1;
+  padding: 5rem;
+  color: var(--creme-color);
 }
 
 .project-title {
-    color: var(--creme-color);
-    font-size: clamp(3rem, 5vw, 5rem);
+  color: var(--creme-color);
+  font-size: clamp(3rem, 5vw, 5rem);
 }
 
 .project-subtitle {
-    font-size: 1.4rem;
-    font-weight: normal;
-    text-transform: uppercase;
-    margin-bottom: 2.5rem;
+  font-size: 1.4rem;
+  font-weight: normal;
+  text-transform: uppercase;
+  margin-bottom: 2.5rem;
 }
 
 .project-info p:not(:last-child) {
-    margin-bottom: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 
 .project-link {
-    display: inline-block;
-    color: var(--creme-color);
-    padding: 1rem 2.5rem;
-    margin-top: 2.5rem;
-    border: 2px solid var(--creme-color);
-    border-radius: 12px;
+  display: inline-block;
+  color: var(--creme-color);
+  padding: 1rem 2.5rem;
+  margin-top: 2.5rem;
+  border: 2px solid var(--creme-color);
+  border-radius: 12px;
 }
 
-form {
-    position: relative;
-    width: 500px;
-    margin: 50px auto 100px auto;
+.contact {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  margin-top: 8rem;
+  background-color: var(--grey-color);
 }
 
-input {
-    font-family: 'Lato', sans-serif;
-    font-size: 0.875em;
-    width: 470px;
-    height: 50px;
-    padding: 0px 15px 0px 15px;
-
-    background: transparent;
-    outline: none;
-    color: #726659;
-
-    border: solid 1px #b3aca7;
-    border-bottom: none;
-
-    transition: all 0.3s ease-in-out;
-    -webkit-transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    -ms-transition: all 0.3s ease-in-out;
+.contact form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 80%;
+  max-width: 510px;
+  min-width: 324px;
+  background-color: var(--grey-color);
+  border: 1px solid lighten(var(--creme-color), 1%);
+  border-bottom: 3px solid var(--creme-color);
+  padding: 2rem;
 }
 
-input:hover {
-    background: #b3aca7;
-    color: #e2dedb;
+.contact h2,
+.contact h3 {
+  text-align: center;
 }
 
-textarea {
-    width: 470px;
-    max-width: 470px;
-    height: 110px;
-    max-height: 110px;
-    padding: 15px;
-
-    background: transparent;
-    outline: none;
-
-    color: #726659;
-    font-family: 'Lato', sans-serif;
-    font-size: 0.875em;
-
-    border: solid 1px #b3aca7;
-
-    transition: all 0.3s ease-in-out;
-    -webkit-transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    -ms-transition: all 0.3s ease-in-out;
+.contact label {
+  align-self: flex-start;
 }
 
-textarea:hover {
-    background: #b3aca7;
-    color: #e2dedb;
+.contact input[type="text"] {
+  margin: 0.5em 0;
+  width: 100%;
+  border: 1px solid var(--dark-color);
+  padding: 6px 10px;
+  color: var(--dark-color);
+  font-size: pxtoem(16, 16);
 }
 
-#submit {
-    width: 502px;
-
-    padding: 0;
-    margin: -5px 0px 0px 0px;
-
-    font-family: 'Lato', sans-serif;
-    font-size: 0.875em;
-    color: #b3aca7;
-
-    outline: none;
-    cursor: pointer;
-
-    border: solid 1px #b3aca7;
-    border-top: none;
+.contact input[type="submit"] {
+  margin-top: 1em; /* add some margin to the top of the submit button */
+  padding: 6px 10px;
+  color: var(--creme-color);
+  border: 1px solid var(--dark-color);
+  background-color: var(--dark-color);
+  cursor: pointer;
+  border-radius: 12px;
 }
 
-#submit:hover {
-    color: #e2dedb;
+/* Style for when the user hovers over the submit button */
+.contact input[type="submit"]:hover {
+  background-color: var(--creme-color);
+  color: var(--grey-color);
 }
 
 .footer {
-    display: flex;
-    align-items: flex-start;
-    gap: 40px;
-    margin: 0 auto;
-    color: var(--background-color);
-    background-color: var(--dark-color);
-    padding: 20px 20px;
-    justify-content: space-between;
+  display: flex;
+  align-items: flex-start;
+  gap: 40px;
+  margin: 0 auto;
+  color: var(--background-color);
+  background-color: var(--dark-color);
+  padding: 20px 20px;
+  justify-content: space-between;
 }
 
 #footer-links {
-    display: flex;
-    gap: 18px;
+  display: flex;
+  gap: 18px;
 }
 
-#footer-links>div {
-    display: grid;
-    gap: 10px;
-    margin-bottom: 30px;
+#footer-links > div {
+  display: grid;
+  gap: 10px;
+  margin-bottom: 30px;
 }
 
 .footer h2 {
-    margin: 0;
-    font-size: 16px;
-    font-weight: 400;
-    color: var(--creme-color);
+  margin: 0;
+  font-size: 16px;
+  font-weight: 400;
+  color: var(--creme-color);
 }
 
 #copyright {
-    font-size: 12px;
+  font-size: 12px;
 }
 
-#copyright>a {
-    margin: 0 4px;
+#copyright > a {
+  margin: 0 4px;
 }
 
-#copyright>span {
-    margin-right: 10px;
+#copyright > span {
+  margin-right: 10px;
 }
 
-@media (width >=620px) {
-    .footer {
-        margin: 0 auto;
-        max-width: 100%;
-        padding: 20px 20px;
-    }
+@media (width >=1024px) {
+  .footer {
+    margin: 0 auto;
+    max-width: 100%;
+    padding: 20px 20px;
+  }
 }
 
-@media (width < 620px) {
-    .project-container {
-        flex-direction: column;
-    }
+@media (width < 1024px) {
+  #skills-section {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+    margin-bottom: 200px;
+  }
 
-    .project-info {
-        padding: 2.5rem;
-    }
+  .contact {
+    height: auto;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
 
-    .project-link {
-        margin-top: 1.5rem;
-    }
+  .contact form {
+    width: 90%;
+    padding: 1rem;
+  }
 
-    .footer {
-        flex-direction: column-reverse;
-        gap: 16px;
-    }
+  .contact input[type="text"] {
+    font-size: pxtoem(14, 16);
+  }
 
-    #footer-links {
-        font-size: 24px;
-    }
+  .project-container {
+    flex-direction: column;
+  }
+
+  .project-info {
+    padding: 2.5rem;
+  }
+
+  .project-link {
+    margin-top: 1.5rem;
+  }
+
+  .footer {
+    flex-direction: column-reverse;
+    gap: 16px;
+  }
+
+  #footer-links {
+    font-size: 24px;
+  }
 }
 
-@media (width < 420px) {
-    .project-container {
-        flex-direction: column;
-    }
+@media (width < 600px) {
+  #skills-section {
+    display: grid;
+    flex-direction: column;
+    grid-template-columns: repeat(1, 1fr);
+    margin-bottom: 200px;
+  }
 
-    .project-info {
-        padding: 2.5rem;
-    }
+  .project-container {
+    flex-direction: column;
+  }
 
-    .project-link {
-        margin-top: 1.5rem;
-    }
+  .project-info {
+    padding: 2.5rem;
+  }
 
-    .footer {
-        text-align: center;
-        align-items: center;
-    }
+  .project-link {
+    margin-top: 1.5rem;
+  }
 
-    #copyright>span {
-        display: block;
-        margin-right: 0;
-        margin-bottom: 2px;
-    }
+  .footer {
+    text-align: center;
+    align-items: center;
+  }
 
+  #copyright > span {
+    display: block;
+    margin-right: 0;
+    margin-bottom: 2px;
+  }
 }
