--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,39 +1,3 @@
-@font-face {
-  font-family: "Playfair Display SC";
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/playfairdisplaysc/v15/ke85OhoaMkR6-hSn7kbHVoFf7ZfgMPr_pb4.ttf)
-    format("truetype");
-}
-
-@font-face {
-  font-family: "Roboto Slab";
-  font-style: normal;
-  font-weight: 300;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/robotoslab/v25/BngbUXZYTXPIvIBgJJSb6s3BzlRRfKOFbvjo0oSWaA.ttf)
-    format("truetype");
-}
-
-@font-face {
-  font-family: "Cormorant Unicase";
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/cormorantunicase/v24/HI_QiZUaILtOqhqgDeXoF_n1_fTGX-vT.ttf)
-    format("truetype");
-}
-
-@font-face {
-  font-family: "Molengo";
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/molengo/v16/I_uuMpWeuBzZNBtQbbQ.ttf)
-    format("truetype");
-}
-
 :root {
   --dark-color: #555a54;
   --background-color: #bfbbaf;
@@ -49,51 +13,46 @@
 
 html {
   scroll-behavior: smooth;
-}
-
-body {
-  background-color: var(--creme-color);
-}
-
-h1 {
-  font-family: "Cormorant Unicase", serif;
-}
-
-h2,
-h3 {
-  font-family: "Playfair Display SC", serif;
-  text-align: center;
-}
-
-p {
-  font-family: "Roboto Slab", serif;
-}
-
-a {
-  text-decoration: none;
-  color: var(--creme-color);
+  background-color: #000;
 }
 
 #global-header {
-  font-family: "Playfair Display SC", serif;
+  font-family: 'Josefin Sans', sans-serif;
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: var(--dark-color);
+  background-color: #000;
 }
 
 #global-header h1 {
-  font-family: "Playfair Display SC", serif;
+  font-family: 'Josefin Sans', sans-serif;
+  letter-spacing: 8px;
+  font-weight: 100;
   float: left;
-  color: var(--creme-color);
-  font: italic;
+  color: #fff;
   padding-left: 1.5rem;
+  visibility: hidden;
+  animation: headerAppear 2s forwards 1s;
 }
 
 #global-header nav {
   display: flex;
   padding-right: 1.5rem;
+  visibility: hidden;
+  animation: headerAppear 2s forwards 1s;
+}
+
+@keyframes headerAppear {
+  0% {
+    opacity: 0;
+    visibility: visible;
+  }
+
+  100% {
+    opacity: 1;
+    visibility: visible;
+  }
 }
 
 #global-header ul {
@@ -111,7 +70,7 @@ a {
 
 #global-header li a {
   display: block;
-  color: black;
+  color: #FFF;
   text-align: center;
   padding: 12px 12px;
   text-decoration: none;
@@ -122,199 +81,436 @@ a {
 }
 
 .home {
-  height: 90vh;
-  width: 100%;
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
   align-items: center;
-  gap: 10px;
-  padding-bottom: 5vh;
+  justify-content: center;
+  height: 100vh;
+  width: 100%;
+  background-color: #000;
+  position: relative;
+}
+
+.home h2 {
+  font-family: 'Josefin Sans', sans-serif;
+  letter-spacing: 25px;
+  color: #fff;
+  font-size: 10.7vw;
+  font-weight: 300;
+  opacity: 0;
+  visibility: hidden;
+  animation: fadeIn 2s forwards 1s;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    visibility: visible;
+  }
+
+  100% {
+    opacity: 1;
+    visibility: visible;
+  }
 }
 
 #landingPage-content {
-  max-width: 45%;
-  text-align: left;
+  z-index: 2;
+  text-align: center;
+  margin-bottom: 1rem;
 }
 
-.home img {
-  max-height: 80vh;
-  max-width: 45vw;
-  border-radius: 50%;
-  border: 0.5vw solid var(--dark-black);
-  margin: 1vh 1vw 1vh 1vw;
-  object-fit: contain;
-}
-
-#landingPage-content h2 {
-  padding: 30px 0;
-  text-align: left;
-  font-size: 50px;
-  font-weight: 600;
-}
-
-#landingPage-content p {
-  padding: 10px 0;
-  font-family: "Roboto Slab", serif;
-  font-size: 16px;
-}
-
-#landingPage-content button {
-  position: relative;
-  width: 130px;
-  height: 40px;
-  line-height: 42px;
-  margin-top: 12px;
-  padding: 0;
-  border: none;
-  background: var(--dark-color);
-  color: var(--creme-color);
-  border-radius: 12px;
-}
-
-#landingPage-content button:hover {
-  color: var(--dark-color);
-  background: transparent;
-  box-shadow: none;
-}
-
-#landingPage-content button:before,
-#landingPage-content button:after {
-  content: "";
+#landingPage-img {
   position: absolute;
   top: 0;
-  right: 0;
-  height: 2px;
-  width: 0;
-  background: var(--dark-color);
-  border-radius: 12px;
-  box-shadow: -1px -1px 5px 0px #fff, 7px 7px 20px 0px #0003,
-    4px 4px 5px 0px #0002;
-  transition: 400ms ease all;
-}
-
-#landingPage-content button:after {
-  right: inherit;
-  top: inherit;
   left: 0;
+  right: 0;
   bottom: 0;
+  display: block;
+  align-items: center;
 }
 
-#landingPage-content button:hover:before,
-#landingPage-content button:hover:after {
-  width: 100%;
-  transition: 800ms ease all;
+#img1 {
+  width: 10%;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  opacity: 1;
+  transform: translate(-50%, -50%);
+}
+
+#img2,
+#img3,
+#img4,
+#img5 {
+  width: 12%;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  opacity: 0;
+  transform: translate(-50%, -50%);
+}
+
+#img1 {
+  animation: floatim1 2s forwards 1.5s;
+}
+
+#img2 {
+  animation: floatim2 2s forwards 1.5s;
+}
+
+#img3 {
+  animation: floatim3 2s forwards 1.5s;
+}
+
+#img4 {
+  animation: floatim4 2s forwards 1.5s;
+}
+
+#img5 {
+  animation: floatim5 2s forwards 1.5s;
+}
+
+@-webkit-keyframes floatim1 {
+  0% {
+    left: 50%;
+    top: 50%;
+    opacity: 0.7;
+  }
+
+  100% {
+    left: 75%;
+    top: 25%;
+    opacity: 0.4;
+
+  }
+}
+
+@-webkit-keyframes floatim2 {
+  0% {
+    left: 50%;
+    top: 50%;
+    opacity: 0.7;
+  }
+
+  100% {
+    left: 15%;
+    top: 75%;
+    opacity: 0.4;
+  }
+}
+
+@-webkit-keyframes floatim3 {
+  0% {
+    left: 50%;
+    top: 50%;
+    opacity: 0.7;
+  }
+
+  100% {
+    left: 35%;
+    top: 15%;
+    opacity: 0.4;
+  }
+}
+
+@-webkit-keyframes floatim4 {
+  0% {
+    left: 50%;
+    top: 50%;
+    opacity: 0.7;
+  }
+
+  100% {
+    left: 90%;
+    top: 70%;
+    opacity: 0.4;
+  }
+}
+
+@-webkit-keyframes floatim5 {
+  0% {
+    left: 50%;
+    top: 50%;
+    opacity: 0.7;
+  }
+
+  100% {
+    left: 15%;
+    top: 35%;
+    opacity: 0.4;
+  }
 }
 
 #about {
   margin-inline: auto;
   width: 100%;
+  background-color: #000;
   align-items: center;
+  display: flex;
+  gap: 50px;
+  height: 200vh;
+  position: relative;
 }
 
-#about h2 {
-  padding: 3rem;
-  font-size: 50px;
-  font-weight: 600;
-}
-
-#skills-section {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 40px;
-  margin-bottom: 200px;
-}
-
-.skill-category {
-  background: #fff;
+.vertical-section {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  border-radius: 4px;
-  padding: 20px;
-  transition: all 0.3s ease-in;
+  flex-basis: 20%;
+  position: sticky;
 }
 
-.skill-category > * {
-  padding: 10px;
+.vertical-title {
+  font-family: 'Josefin Sans', sans-serif;
+  letter-spacing: 5px;
+  font-size: 1.5vw;
+  font-weight: 200;
+  color: #fff;
+  writing-mode: vertical-lr;
+  transform: rotate(180deg);
 }
 
-.skill-category img {
+.section-number {
+  font-family: 'Josefin Sans', sans-serif;
+  letter-spacing: 5px;
+  font-size: 4vw;
+  font-weight: 200;
+  color: #fff;
+  margin-bottom: 10px;
+}
+
+.vertical-section hr {
+  color: #fff;
+  border: none;
+  height: 100px;
+  background-color: #fff;
+  width: 1px;
+  margin-bottom: 10px;
+}
+
+.content-container {
   width: 100%;
-  height: 80%;
-  object-fit: cover;
+  display: block;
+  height: 200vh;
 }
 
-.skill-category h3 {
-  padding: 20px 10px;
-  font-size: 1.5rem;
+.content-container > div {
+  transition: opacity 0.5s; /* Add smooth transition */
 }
 
-.skill-category p {
-  line-height: 20px;
-  font-size: 400;
+#test1 {
+  display: flex;
+  height: 100vh;
+  align-items: center;
+  justify-content: space-between;
 }
 
-/* .skill-category:hover {
-    background: blue;
-    color: #fff;
-    box-shadow: 0px 0px 11px 5px #000000;
-
-  } */
-
-table {
-  width: 100%;
-  max-width: 900px;
-  margin: auto;
-  border-collapse: collapse;
-  table-layout: fixed;
+#test2 {
+  display: flex;
+  height: 100vh;
+  align-items: center;
+  justify-content: space-between;
+  opacity: 1;
 }
 
-table caption {
-  padding: 1em;
-  font-size: 1.5em;
-  font-weight: bold;
+#introduction-container {
+  flex-basis: 40%;
+  font-family: 'Josefin Sans', sans-serif;
+  color: #fff;
+  margin: 20px auto;
+}
+
+#introduction-container h3 {
+  padding-bottom: 6rem;
+  color: #fff; 
+  font-size: 4vw;
+}
+
+#introduction-container h4 {
+  margin: 1rem 0;
+  color: #007BFF;
+  font-weight: 400; 
+}
+
+#introduction-container p {
+  line-height: 1.6; 
+  font-weight: 300; 
+  font-size: 1rem;
+}
+
+.pill-container {
+  flex-basis: 60%;
+  padding: 0.5rem ;
+}
+
+.pill-box {
+  border-radius: 2rem;
+  position: relative;
+  height: auto;
+  min-height: 6.7rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 0.5rem;
+  margin-bottom: 1rem;
+}
+
+.pill-box-left { 
+  padding: 1.3rem 1.5rem;
+  border-radius: 2.5rem;
+  position: relative;
+  height: auto;
+  min-height: 9rem;
+  padding: 0.5rem; 
   text-align: center;
-  color: #333;
+  font-family: 'Josefin Sans', sans-serif;
+  font-size: 3vw;
+  font-weight: 200;
+  color: #fff;
+  display: flex; /* Added for centering */
+  align-items: center; /* Vertically centers the text */
+  justify-content: center; /* Horizontally centers the text */
 }
 
-colgroup col {
-  width: 33.33%;
-}
-
-table th {
-  padding: 1em;
+.pill-box-right {
+  border-left: 0;
+  padding: 0.5rem; 
   text-align: center;
-  font-size: 1.2em;
-  font-weight: bold;
-  border-bottom: 2px solid #333;
+  display: flex; 
+  align-items: center; 
+  justify-content: center; 
+  font-family: 'Josefin Sans', sans-serif;
+  font-size: 1vw;
+  font-weight: 100;
+  color: #fff;
 }
 
-table td {
-  padding: 1em;
+#experience-container {
+  flex-basis: 35%;
+  font-family: 'Josefin Sans', sans-serif;
+  color: #fff;
+}
+
+#experience-container h3 {
+  color: #fff; 
+  font-size: 4vw;
+  font-weight: 100;
   text-align: center;
-  font-size: 1em;
-  border-bottom: 1px solid #ddd;
 }
 
-table em {
-  font-size: 0.8em;
-  color: #666;
+#experience-container h3 span {
+  display: block;
+  text-align: center; 
+}
+
+#experience-box {
+  flex-basis: 60%;
+  padding: 1.3rem 1.5rem;
+  border-radius: 2.5rem;
+  position: relative;
+  height: auto;
+  min-height: 9rem;
+  font-family: 'Josefin Sans', sans-serif;
+  color: #fff;
+  text-align: left;
+  background: linear-gradient(330deg, #000, #000, #DAB060);
+  border: 2px solid #DAB060;
+}
+
+#experience-box div {
+  margin: 2rem;
+}
+
+#experience-box h3 {
+  font-size: 3.5vw; 
+  font-weight: 100;
+  margin: 10px 0; 
+}
+
+#experience-box span {
+  font-size: 1.0vw; 
+  display: block; 
 }
 
 #projects {
-  max-width: 120rem;
-  padding-inline: 1.5rem;
   margin-inline: auto;
+  width: 100%;
+  background-color: #000;
+  align-items: center;
+  display: flex;
+  gap: 50px;
 }
 
-#projects h2 {
-  padding: 3rem;
-  font-size: 50px;
-  font-weight: 600;
+#project1 {
+  display: flex;
+  height: 100vh;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.project-container {
+#project2 {
+  display: none;
+  height: 100vh;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#project3 {
+  display: none;
+  height: 100vh;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#project4 {
+  display: none;
+  height: 100vh;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.project-img-container {
+  flex-basis: 40%;
+  align-items: center;
+  overflow: hidden; /* Added to contain child elements */
+  display: flex; /* Optional: if you want to center the image horizontally using justify-content */
+  justify-content: center; /* Optional: center the image horizontally */
+}
+
+.project-img-container img {
+  max-width: 100%; /* Ensures the image doesn't overflow its parent */
+  height: auto; /* Keeps the aspect ratio of the image */
+  display: block; /* Removes any extra space below the image */
+}
+
+.project-description {
+  font-family: 'Josefin Sans', sans-serif;
+  color: #fff;
+  flex-basis: 60%;
+  padding: 0.5rem ;
+}
+
+.project-description h3 {
+  font-size: 3.5vw; 
+  line-height: 1.1;
+  font-weight: 200;
+  margin: 10px 0; 
+}
+
+.project-description span {
+  font-size: 1.0vw; 
+}
+
+.project-description p {
+  font-size: 1.0vw; 
+  margin: 2rem 0;
+  padding-right: 5rem;
+  line-height: 1.6;
+  font-weight: 300;
+}
+
+
+/* .project-container {
   display: flex;
   background-color: var(--dark-color);
   box-shadow: 0.5rem 0.5rem 1rem rgba(0, 0, 0, 0.5);
@@ -371,7 +567,7 @@ table em {
   margin-top: 2.5rem;
   border: 2px solid var(--creme-color);
   border-radius: 12px;
-}
+} */
 
 #contact {
   display: flex;
@@ -445,7 +641,7 @@ table em {
   gap: 18px;
 }
 
-#footer-links > div {
+#footer-links>div {
   display: grid;
   gap: 10px;
   margin-bottom: 30px;
@@ -462,12 +658,21 @@ table em {
   font-size: 12px;
 }
 
-#copyright > a {
+#copyright>a {
   margin: 0 4px;
 }
 
-#copyright > span {
+#copyright>span {
   margin-right: 10px;
+}
+
+.hidden {
+  opacity: 0;
+  transition: all 2s;
+}
+
+.show {
+  opacity: 1;
 }
 
 @media (width >=1024px) {
@@ -521,7 +726,7 @@ table em {
   #footer-links {
     font-size: 24px;
   }
-}   
+}
 
 @media (width < 600px) {
   #skills-section {
@@ -570,9 +775,11 @@ table em {
   table td:nth-of-type(1):before {
     content: "2019";
   }
+
   table td:nth-of-type(2):before {
     content: "2021-2023";
   }
+
   table td:nth-of-type(3):before {
     content: "Present";
   }
@@ -594,7 +801,7 @@ table em {
     align-items: center;
   }
 
-  #copyright > span {
+  #copyright>span {
     display: block;
     margin-right: 0;
     margin-bottom: 2px;
