--- a/styles/styles.css
+++ b/styles/styles.css
@@ -414,6 +414,10 @@ html {
 .pill-container {
   flex-basis: 60%;
   padding: 0.5rem;
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  flex-direction: column;
 }
 
 .pill-box {
@@ -424,7 +428,6 @@ html {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 0.5rem;
-  margin-bottom: 1rem;
 }
 
 .pill-box-left {
